Navbar, Login and Signup forms done

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,59 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-  <div class="container-fluid">
-    <!-- Logo -->
-    <a class="navbar-brand" href="#">Logo</a>
-    <!-- Toggle button -->
-    <button
-      class="navbar-toggler shadow-none border-0"
-      type="button"
-      data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasNavbar"
-      aria-controls="offcanvasNavbar"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- Sidebar -->
-    <div
-      class="sidebar offcanvas offcanvas-start"
-      tabindex="-1"
-      id="offcanvasNavbar"
-      aria-labelledby="offcanvasNavbarLabel"
-    >
-      <!-- Sidebar header -->
-      <div class="offcanvas-header text-white border-bottom">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Logo</h5>
-        <button
-          type="button"
-          class="btn-close btn-close-white shadow-none"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
-      <!-- Sidebar body -->
-      <div class="offcanvas-body d-flex flex-column flex-lg-row p-3 p-lg-0">
-        <ul
-          class="navbar-nav justify-content-center align-items-center fs-5 flex-grow-1 pe-0"
-        >
-          <li class="nav-item mx-2">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-        <!-- Login/ Sign up -->
-        <div
-          class="d-flex flex-column flex-lg-row justify-content-center align-items-center gap-3"
-        >
-          <a href="#login" class="text-white">Login</a>
-          <a
-            href="#signup"
-            class="text-white text-decoration-none px-3 py-1 rounded-4 signup-button"
-            >Sign Up</a
-          >
-        </div>
-      </div>
-    </div>
-  </div>
-</nav>
+<header class="header">
+  <nav class="navbar">
+    <a href="#">Home</a>
+    <a href="#">Workout</a>
+    <a href="#">About</a>
+  </nav>
+  <nav class="navbar auth-links">
+    <a routerLink="/auth" class="login-btn">Login</a>
+    <a routerLink="/auth" class="register-btn">Register</a>
+  </nav>
+</header>
