--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,22 +1,11 @@
-<div class="flex-1 flex flex-col justify-center items-center p-10 text-center">
-  <div class="content-container">
-    <div class="hero-text-container">
-      <h2 class="hero-text">Make fitness a habit</h2>
-      <button class="custom-sign-up-button">Sign Up</button>
+<div class="home">
+    <div class="home-content">
+        <div class="text">
+        <h2>Get in the best shape of your life</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <a href="#" class="btn">Get Started</a>
+        </div>
     </div>
-  </div>
-  <!-- <div class="icons-container">
-      <div class="icon-item">
-        <i class="icon bi bi-heart-fill"></i>
-        <div class="text">Lifestyle</div>
-      </div>
-      <div class="icon-item">
-        <i class="icon bi bi-eye-fill"></i>
-        <div class="text">Vision</div>
-      </div>
-      <div class="icon-item">
-        <i class="icon bi bi-clock-fill"></i>
-        <div class="text">Time</div>
-      </div>
-    </div> -->
 </div>
