--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,11 +1,9 @@
 <div class="home">
-    <div class="home-content">
-        <div class="text">
-        <h2>Get in the best shape of your life</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <a href="#" class="btn">Get Started</a>
-        </div>
+  <div class="hero-section">
+    <div class="content">
+      <h2>Empower Your Fitness Journey</h2>
+      <p>Track your workout progress and achieve your fitness goals with our intuitive gym tracker. Perfect for every fitness level.</p>
+      <button>Start Tracking</button>
     </div>
+  </div>
 </div>
