--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -1,3 +1,72 @@
-.home {
-    padding-top: 70px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.hero-section {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.hero-section .content {
+  max-width: 1250px;
+  padding-left: 120px;
+  margin: 0;
+  width: 100%;
+  color: #fff;
+}
+
+.hero-section .content h2 {
+  font-size: 3rem;
+  max-width: 800px;
+  line-height: 70px;
+}
+
+.hero-section .content p {
+  font-weight: 400;
+  max-width: 600px;
+  margin-top: 15px;
+}
+
+.hero-section .content button {
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 12px 30px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-radius: 6px;
+  margin-top: 38px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: 0.2s ease;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-section .content button:hover {
+  color: #fff;
+  background: rgb(177, 176, 176);
+}
+
+@media (max-width: 768px) {
+  .hero-section .content {
+    text-align: center;
+    padding: 10px;
+  }
+
+  .hero-section .content :is(h2, p) {
+    max-width: 100%;
+  }
+
+  .hero-section .content h2 {
+    font-size: 2.3rem;
+    line-height: 60px;
+  }
+
+  .hero-section .content button {
+    padding: 9px 18px;
+  }
 }
