--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="content">
       <h2>Empower Your Fitness Journey</h2>
       <p>Track your workout progress and achieve your fitness goals with our intuitive gym tracker. Perfect for every fitness level.</p>
-      <button>Start Tracking</button>
+      <button (click)="navigateBasedOnAuthStatus()">Start Tracking</button>
     </div>
   </div>
 </div>
