--- a/frontend/src/app/pages/auth/auth.component.html
+++ b/frontend/src/app/pages/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="background"></div>
 <div class="container">
   <div class="content">
-    <h2 class="logo"><i class="bx bxs-castle"></i> Level Forge</h2>
+    <h2 class="logo"><i class="bx bxs-castle"></i> FitForge</h2>
     <div class="text-sci">
       <h2>Welcome to Your Fitness Tracker!</h2>
       <p>
@@ -91,7 +91,7 @@
           </div>
         </div>
         <br />
-        <button type="submit" class="btn">Sign in</button>
+        <button type="submit" class="btn">Sign up</button>
         <div class="login-register">
           <p>
             Already have an account?
