Added some small animations

--- a/frontend/src/app/pages/workout/workout.component.html
+++ b/frontend/src/app/pages/workout/workout.component.html
@@ -1,1 +1,9 @@
-<p>workout works!</p>
+<div class="workout">
+  <main class="workout-content">
+    <h1 class="title">Get your workout</h1>
+    <div class="input-group justify-content-center">
+      <input type="text" placeholder="Search" class="search-workout-input" /> 
+      <button class="btn btn-primary hotel-btn">Get a list of workouts</button>
+    </div>
+  </main>
+</div>
