--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -35,6 +35,16 @@
   cursor: pointer;
 }
 
+
+.background {
+  width: 100%;
+  height: 30px;
+  background: url('../../../assets/images/background1.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px);
+}
+
 @media (min-width: 992px) {
   .auth-links {
     padding-right: 50px;
