--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
-<header class="header">
+
+<header class="header" @slideDown>
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <!-- Toggle Button -->
       <button
         class="navbar-toggler shadow-none border-0"
@@ -11,7 +12,7 @@
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button >
       <!-- SideBar -->
       <div class="sidebar offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <!-- Sidebar Header -->
@@ -20,7 +21,7 @@
           <button type="button" class="btn-close btn-close-white shadow-none" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <!-- Sidebar body -->
-        <div class="offcanvas-body d-flex flex-column flex-lg-row p-4 p-lg-0">
+        <div class="offcanvas-body d-flex flex-column flex-lg-row p-4 p-lg-0 ">
           <ul class="navbar-nav align-items-center fs-5 flex-grow-1 pe-3">
             <li class="nav-item mx-2">
               <a class="nav-link active" aria-current="page" routerLink="/home" data-bs-dismiss="offcanvas">Home</a>
