--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home">
+<main class="home" @slideDown>
   <div class="hero-section">
     <div class="content">
       <h2>Empower Your Fitness Journey</h2>
@@ -6,4 +6,4 @@
       <button (click)="navigateBasedOnAuthStatus()">Start Tracking</button>
     </div>
   </div>
-</div>
+</main>
