--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,11 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 body {
-  background-image: url('/assets/images/background1.jpg');
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  position: relative;
+  overflow: hidden;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: -15px;
+  left: -15px;
+  width: calc(100% + 30px);
+  height: calc(100% + 30px);
+  background-image: url('/assets/images/background.jpg');
   background-blend-mode: multiply;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  filter: blur(var(--blur));
+  z-index: -1;
 }
 
 .toast-bottom-center {
