Implemented modal  do create and edit workout

--- a/frontend/src/app/components/workout-list/workout-list.component.html
+++ b/frontend/src/app/components/workout-list/workout-list.component.html
@@ -1,5 +1,29 @@
 <div class="workout-list">
-    <main class="workout-list-content">
-        
-    </main>
+  <main class="workout-list-content">
+    <div *ngFor="let workout of workouts; let i = index" class="workout-card" (click)="expandCard($event)">
+      <div class="header">
+        <div class="title">{{ workout.notes }}</div>
+        <div class="dropdown" (clickOutside)="closeDropdown(i)">
+          <i class="fas fa-ellipsis-h options" (click)="toggleDropdown(i)"></i>
+          <div class="dropdown-menu" [class.show]="dropdownOpen[i]">
+            <a class="dropdown-item" (click)="editWorkout.emit(workout.id)"><i class="fas fa-edit" style="color: rgb(150, 211, 247);"></i> Edit Workout</a>
+            <a class="dropdown-item delete" (click)="deleteWorkout.emit(workout.id)"><i class="fas fa-trash" style="color: red;"></i> Delete</a>
+          </div>
+        </div>
+      </div>
+      <div class="details">
+        <div class="info"><i class="far fa-calendar-alt"></i> {{ workout.date | date : 'fullDate' }}</div>
+      </div>
+      <div class="exercise-description">
+        <p>Exercise</p>
+        <p>Sets</p>
+      </div>
+      <div class="exercise" *ngFor="let exercise of workout.exercises">
+        <div class="row">
+          <div class="col-6">{{ exercise.name }}</div>
+          <div class="col-6 text-end">{{ exercise.series.length }} x {{ getRepRange(exercise.series) }}</div>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
