--- a/frontend/src/app/pages/workout/workout.component.css
+++ b/frontend/src/app/pages/workout/workout.component.css
@@ -1,13 +1,17 @@
+
 .workout-content {
   width: 100%;
-  margin: auto; 
-  padding-top: 80px;
+  margin: auto;
   padding-left: 220px;
-  padding-right: 220px;  
-  padding-bottom: 80px;
+  padding-right: 220px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.title{
+.title {
   text-align: center;
   margin-bottom: 30px;
   color: white;
@@ -17,7 +21,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .input-group .search-workout-input {
@@ -30,7 +33,6 @@
   outline: none;
 }
 
-
 .input-group .hotel-btn {
   width: 200px;
   height: 40px;
@@ -40,4 +42,17 @@
   font-size: 16px;
   background-image: linear-gradient(to right, #06b4fe, #0051ff);
   color: white;
+}
+
+.workout-list-container {
+  width: 100%;
+  max-height: 66vh; 
+  overflow-y: auto;
+
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
+.workout-list-container::-webkit-scrollbar {
+  display: none;
 }
