--- a/frontend/src/app/components/workout-list/workout-list.component.css
+++ b/frontend/src/app/components/workout-list/workout-list.component.css
@@ -1,63 +1,71 @@
 .workout-list {
-  display: flex;
+  display: block;
   flex-wrap: wrap;
   justify-content: center;
+  height: 100%;
 }
 
 .workout-card {
+  min-height: 95px;
   min-width: 600px;
-  max-height: 95px;
-  border: 1px solid #e0e0e0;
-  border-radius: 10px;
+  max-height: 100px;
+  border-radius: 20px;
   padding: 20px;
   margin: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.45);
+  background-color: rgba(43, 43, 43, 0.85);
+  color: white; 
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(15px);
-  transition: max-height 1s ease;
+  transition: max-height 1s ease, background-color 0.3s ease;
   overflow: hidden;
+  
 }
 
 .workout-card:hover {
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(43, 43, 43, 0.95);
   height: auto;
   max-height: 600px;
 }
 
 .workout-card.expanded {
-    background: rgba(255, 255, 255, 0.7);
-    height: auto;
-    max-height: 600px;
-  }
+  background: rgba(43, 43, 43, 0.95);
+  height: auto;
+  max-height: 600px;
+}
 
 .workout-card .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .workout-card .header .title {
   font-weight: bold;
 }
+
 .workout-card .header .options {
   color: #007bff;
   cursor: pointer;
 }
+
 .workout-card .details {
   margin-top: 10px;
 }
+
 .workout-card .details .info {
   display: flex;
   align-items: center;
   margin-bottom: 5px;
 }
+
 .workout-card .details .info i {
   margin-right: 5px;
 }
+
 .workout-card .exercise {
   margin-top: 10px;
 }
+
 .workout-card .exercise .row {
   margin-bottom: 5px;
 }
@@ -73,6 +81,7 @@
 .exercise-description p {
   font-weight: bold;
 }
+
 .dropdown {
   position: relative;
   display: inline-block;
@@ -113,4 +122,42 @@
 
 .dropdown-item:hover {
   background-color: #575757;
+}
+
+@media (max-width: 1200px) {
+  .workout-card {
+    min-width: 550px;
+  }
+}
+
+@media (max-width: 992px) {
+  .workout-card {
+    min-width: 450px;
+  }
+}
+
+@media (max-width: 768px) {
+  .workout-card {
+    min-width: 400px;
+  }
+
+  .exercise-description p {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 576px) {
+  .workout-card {
+    margin: 10px;
+    min-width: 340px ;  
+  }
+
+  .exercise-description {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .exercise-description p {
+    margin: 5px 0;
+  }
 }
