--- a/frontend/src/app/pages/workout/workout.component.html
+++ b/frontend/src/app/pages/workout/workout.component.html
@@ -1,13 +1,18 @@
 <main class="workout-content">
-  <h1 class="title">Get your workout</h1>
-  <div class="input-group justify-content-center">
-    <input type="text" #searchInput placeholder="Search" class="search-workout-input" />
-    <button class="btn btn-primary hotel-btn" (click)="getWorkouts()">Get a list of workouts</button>
+  <div class="workout-container" @slideDown>
+    <h1 class="title">Recent Workouts</h1>
+    <div class="input-group">
+      <input type="text" #searchInput placeholder="Search" class="search-workout-input" />
+      <button class="btn btn-primary workout-btn" (click)="getWorkouts()">Get workouts</button>
+    </div>
+    <div class="workout-list-container" #workoutListContainer>
+      <app-workout-list [workouts]="workouts" (deleteWorkout)="handleDeleteWorkout($event)" (editWorkout)="handleEditWorkout($event)"></app-workout-list>
+      <div class="scroll-indicator" *ngIf="showScrollIndicator">
+        <i class="fas fa-arrow-down"></i>
+      </div>
+    </div>
   </div>
-  <div class="text-center my-3">
-    <button class="btn btn-primary" (click)="handleCreateWorkout()">Create New Workout</button>
-  </div>
-  <div class="workout-list-container">
-    <app-workout-list [workouts]="workouts" (deleteWorkout)="handleDeleteWorkout($event)" (editWorkout)="handleEditWorkout($event)"></app-workout-list>
-  </div>
+  <button class="fab" (click)="handleCreateWorkout()">
+    <i class="fas fa-plus"></i>
+  </button>
 </main>
