--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -29,9 +29,9 @@
             <li class="nav-item mx-2">
               <a class="nav-link" routerLink="/workout" data-bs-dismiss="offcanvas">Workout</a>
             </li>
-            <li class="nav-item mx-2">
+            <!-- <li class="nav-item mx-2">
               <a class="nav-link" routerLink="/about" data-bs-dismiss="offcanvas">About</a>
-            </li>
+            </li> -->
           </ul>
           <div class="d-flex flex-column flex-lg-row align-items-center auth-links">
             <a *ngIf="!authService.isLoggedIn()" [routerLink]="['/auth']" [queryParams]="{ form: 'login' }" class="login-btn" data-bs-dismiss="offcanvas"
