--- a/frontend/src/app/pages/workout/workout.component.css
+++ b/frontend/src/app/pages/workout/workout.component.css
@@ -14,7 +14,7 @@
 
 .workout-list-container {
   width: 100%;
-  max-height: 74vh;
+  max-height: 66vh;
   overflow-y: auto;
   padding: 10px;
   position: relative;
@@ -38,6 +38,42 @@
   align-items: center;
   margin-bottom: 20px;
   flex-wrap: wrap;
+}
+
+.form-check-label{
+  padding-left:10px;
+  color: rgba(139, 139, 139, 0.5);
+  font-size: 20px;
+  font-style: bold;
+}
+
+.form-check-input{
+  background-color: #868686;
+  outline: none;
+}
+
+.form-check{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.form-control{
+  height: 40px;
+  width: 220px;
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  outline: none;
+  margin-bottom: 10px;
+}
+
+.parent-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .search-workout-input, .search-workout-date {
@@ -188,6 +224,10 @@
   .input-group .hotel-btn {
     width: 180px;
   }
+
+  .form-control{
+    width: 210px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -200,7 +240,11 @@
   }
 
   .workout-list-container{
-    max-height: 78vh;
+    max-height: 68vh;
+  }
+
+  .form-control{
+    width: 200px;
   }
 }
 
@@ -226,7 +270,11 @@
   }
 
   .workout-list-container{
-    max-height: 78vh;
+    max-height: 66vh;
+  }
+
+  .form-control{
+    width: 180px;
   }
 }
 
@@ -252,6 +300,6 @@
   }
 
   .workout-list-container{
-    max-height: 78vh;
+    max-height: 64vh;
   }
 }
