--- a/frontend/src/app/pages/workout/workout.component.css
+++ b/frontend/src/app/pages/workout/workout.component.css
@@ -11,7 +11,11 @@
   display: flex;
   flex-direction: column;
 }
-
+.no-workouts-message {
+  color: white;
+  font-size: 16px;
+  text-align: center;
+}
 .workout-list-container {
   width: 100%;
   max-height: 66vh;
